# WeBan

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.slim  LICENSE  README.md  Taskfile.yml  WeBan.py  api.py  captcha.py  captcha_model.onnx  client.py  config.example.json  config.example.toml  entrypoint.sh  main.py  pyproject.toml  requirements-ocr.txt  requirements.txt  userscript.js
.githooks/: pre-commit
.github/workflows/: build.yml  lint.yml
answer/: answer.json
weban/: logger.py  updater.py
weban/app/: __init__.py  bootstrap.py  config.py  runtime.py  task_engine.py
weban/core/: __init__.py  answer.py  auth.py  base.py  browser.py  captcha.py  client.py  const.py  exam.py  study.py
weban/core/exam/: __init__.py  answer_manager.py  completion_manager.py  context_detector.py  mixin.py  submit_manager.py
weban/core/study/: __init__.py  runtime_analysis.py  state.py
