[project]
name = "weban"
version = "3.7.0"
description = "auto finish weiban"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "nodriver>=0.50",
    "loguru>=0.7.3",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=12.2.0",
    "pyaes>=1.6.1",
    "requests>=2.34.2",
]
