[project]
name = "weban"
version = "3.8.1"
description = "auto finish weiban"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "loguru>=0.7.3",
    "nodriver>=0.50.3",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pyaes>=1.6.1",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pyright>=1.1.409",
    "ruff>=0.15.15",
]
